--- a/AtkTennisWeb/Views/Shared/_Layout.cshtml
+++ b/AtkTennisWeb/Views/Shared/_Layout.cshtml
@@ -258,7 +258,7 @@
 
                                     <li class="nav-item">
                                         <a href="~/AdminHome/RegisterMember" class="nav-link">
-                                            <i class="fas fa-plus nav-icon"></i>
+                                            <i class="fas fa-user-cog nav-icon"></i>
                                             <p>Üye Kaydı</p>
                                         </a>
                                     </li>
@@ -343,7 +343,7 @@
 
                         <li  class="nav-item ">
                             <a style="background-color:#625e5e" href="" class="nav-link">
-                                <i class="nav-icon fas fa-bell"></i>
+                                <i class="nav-icon fas fa-users"></i>
                                 <p>
                                     Üyeler
                                     <i class="fas fa-angle-left right"></i>
@@ -355,8 +355,8 @@
 
 
                                 <li class="nav-item">
-                                    <a href="~/SystemSettings/MemberSettings" class="nav-link">
-                                        <i class="far fa-window-close nav-icon"></i>
+                                    <a href="~/AdminHome/CabinetListUser" class="nav-link">
+                                        <i class="fas fa-archive nav-icon"></i>
                                         <p>Dolap İşlemleri</p>
                                     </a>
                                 </li>
@@ -406,6 +406,13 @@
                                     </li>
 
                                     <li class="nav-item">
+                                        <a href="~/SystemSettings/MemberSettings" class="nav-link">
+                                            <i class="fas fa-archive nav-icon"></i>
+                                            <p>Üye Dolap Ayarları</p>
+                                        </a>
+                                    </li>
+
+                                    <li class="nav-item">
                                         <a href="~/SystemSettings/CourtSettings" class="nav-link">
                                             <i class="fas fa-flag nav-icon"></i>
                                             <p>Kort Ayarları </p>
@@ -446,51 +453,51 @@
                                     </li>
 
                                     @*<li class="nav-item">
-                                            <a href="#" class="nav-link">
-                                                <i class="nav-icon fas fa-chalkboard-teacher"></i>
-                                                <p>
-                                                    Öğr. Gel. ve Tak. Ayar.
-                                                    <i class="right fas fa-angle-left"></i>
-                                                </p>
-                                            </a>
-                                            <ul class="nav nav-treeview">
-                                                <li class="nav-item">
-                                                    <a href="~/SystemSettings/EducationSchoolSettings" class="nav-link">
-                                                        <i class="far fa-circle nav-icon"></i>
-                                                        <p>Antreman Havuzu</p>
-                                                    </a>
-                                                </li>
+            <a href="#" class="nav-link">
+                <i class="nav-icon fas fa-chalkboard-teacher"></i>
+                <p>
+                    Öğr. Gel. ve Tak. Ayar.
+                    <i class="right fas fa-angle-left"></i>
+                </p>
+            </a>
+            <ul class="nav nav-treeview">
+                <li class="nav-item">
+                    <a href="~/SystemSettings/EducationSchoolSettings" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Antreman Havuzu</p>
+                    </a>
+                </li>
 
-                                                <li class="nav-item">
-                                                    <a href="~/SystemSettings/EducationPerformanceSettings" class="nav-link">
-                                                        <i class="far fa-circle nav-icon"></i>
-                                                        <p>Fiziksel Çalışmalar</p>
-                                                    </a>
-                                                </li>
+                <li class="nav-item">
+                    <a href="~/SystemSettings/EducationPerformanceSettings" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Fiziksel Çalışmalar</p>
+                    </a>
+                </li>
 
 
-                                                <li class="nav-item">
-                                                    <a href="~/SystemSettings/EducationPrivateLessonSettings" class="nav-link">
-                                                        <i class="far fa-circle nav-icon"></i>
-                                                        <p>Oyunlar</p>
-                                                    </a>
-                                                </li>
+                <li class="nav-item">
+                    <a href="~/SystemSettings/EducationPrivateLessonSettings" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Oyunlar</p>
+                    </a>
+                </li>
 
-                                                <li class="nav-item">
-                                                    <a href="~/SystemSettings/EducationPrivateLessonSettings" class="nav-link">
-                                                        <i class="far fa-circle nav-icon"></i>
-                                                        <p>Gelişim Formları</p>
-                                                    </a>
-                                                </li>
+                <li class="nav-item">
+                    <a href="~/SystemSettings/EducationPrivateLessonSettings" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Gelişim Formları</p>
+                    </a>
+                </li>
 
-                                                <li class="nav-item">
-                                                    <a href="~/SystemSettings/EducationPrivateLessonSettings" class="nav-link">
-                                                        <i class="far fa-circle nav-icon"></i>
-                                                        <p>İçerik İşlemleri</p>
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                        </li>*@
+                <li class="nav-item">
+                    <a href="~/SystemSettings/EducationPrivateLessonSettings" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>İçerik İşlemleri</p>
+                    </a>
+                </li>
+            </ul>
+        </li>*@
 
                                     <li class="nav-item">
                                         <a href="~/SystemSettings/ReservationSettings" class="nav-link">
